# taxi-toy

./: README.md
data/: taxi_zones.geojson
server/: .gitignore  README.md  pyproject.toml
server/app/: database.py  main.py  models.py  queries.py
taxi-vis/: package-lock.json  package.json  vite.config.ts
taxi-vis/src/: App.css  App.tsx  index.css
taxi-vis/src/components/: TaxiZonesMap.tsx
